# shrinky-rs

./: .gitignore  .imgbotconfig  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SECURITY.md  clippy.toml  justfile  mise.toml
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: clippy.yml  rust_test.yml
src/: cli.rs  imagedata.rs  lib.rs  main.rs
tests/: test_delete.rs  test_geometry.rs  test_image.rs  test_imageformat.rs  test_outputformat.rs  test_psnr_quality.rs  test_ssim_quality.rs
tests/test_images/: bruny-oysters.avif  bruny-oysters.heif
