[package]
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
name = "shrinky-rs"
version = "0.0.3"
edition = "2024"
repository = "https://github.com/yaleman/shrinky-rs"
description = "Rusty image converter and compressor"
license = "MIT"

[dependencies]
clap = { version = "4.5.60", features = ["derive", "env"] }
image = { version = "0.25.9", features = ["rayon", "avif-native"] }
libheif-rs = { version = "2.6.1", features = ["image"] }
log = { version = "0.4.29", features = [
    "release_max_level_debug",
    "max_level_debug",
] }
rayon = "1.11.0"
stderrlog = "0.6.0"
strum = { version = "0.27.2", features = ["derive", "strum_macros"] }

[dev-dependencies]
libheif-sys = "5.1.1"
rayon = "1.11.0"
